# spiewnik-pielgrzyma

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  GitVersion.yml  Makefile  README.md  fnox.toml  mise.toml  pubspec.yaml
.claude/: settings.json  settings.local.json
.github/workflows/: analyse.yml  flutter_test.yml  hugo.yml  main.yml  release.yml  release_web.yml  search-ci.yml  (+1 more)
android/: settings.gradle
assets/: hymns.csv  hymns.sql  hymns_pdfs.csv  hymns_texts.json
docs/: design_semantic_search.md  dziennik.md  flutter_intelligent_search_integration_plan.md  search_improvements.md
ios/: firebase_app_id_file.json
lib/: database.dart  firebase_options.dart  home.dart  main.dart  objectbox-model.json  objectbox.g.dart  router.dart
linux/: CMakeLists.txt  my_application.cc
macos/: firebase_app_id_file.json
pages/: hugo.toml
scripts/: bump-minor.sh  bump-patch.sh  generate_embeddings.py  generate_embeddings_bge_m3.py  texts_to_html.py  texts_to_markdown.py
search/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  config.py  db.py  embeddings.py  gemini.py  logger.py  main.py  model.py  pyproject.toml
search-worker/: .gitignore  package-lock.json  package.json  tsconfig.json  wrangler.toml
search/alembic/: env.py
search/alembic/versions/: 75a1ab7fd0eb_create_search_logs_table.py
search/tests/: test_embeddings.py  test_gemini.py  test_logger.py  test_main.py  test_model.py
test/: database_test.dart  smoke_test.dart  widget_test.dart
web/: index.html  manifest.json  polityka_prywatnosci.html
windows/: CMakeLists.txt
(+1057 files in other folders)
