[project]
name = "spiewnik-search"
version = "0.1.0"
description = "Semantic search API for Śpiewnik Pielgrzyma"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "huggingface-hub>=1.8.0",
    "onnxruntime>=1.24.4",
    "transformers>=5.4.0",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
