[project]
name = "spiewnik-search"
version = "0.1.0"
description = "Semantic search API for Śpiewnik Pielgrzyma"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "huggingface-hub>=1.8.0",
    "numpy>=2.4.4",
    "onnxruntime>=1.24.4",
    "sqlalchemy[asyncio]>=2.0.49",
    "transformers>=5.4.0",
    "uvicorn>=0.42.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]
